add push trigger for all tags in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ name: Build and Upload Python Package
 on:
   release:
     types: [published]
+  push:
+    tags:
+      - '*'
 
 jobs:
   build-and-upload:
